--- a/style/login.css
+++ b/style/login.css
@@ -48,6 +48,10 @@
 	color: lightgray;
 }
 
+#submit_btn:hover{
+	border: 0.5px solid grey;
+}
+
 #field_login{
 	background-color: rgba(0, 0, 0, 0.7);
 	display: none;
