--- a/static/style/list.css
+++ b/static/style/list.css
@@ -1,5 +1,5 @@
 .list_of_surveys{
-	height: 680px;
+	height: 610px;
 	overflow-y: scroll;
 }
 
@@ -8,7 +8,7 @@
 }
 
 #nav_list{
-	margin: 0 auto;
+  margin: 0 auto;
 	padding-bottom: 5%;
-	border-bottom: 2px solid firebrick;
+	border-bottom: 2px solid white;
 }
