--- a/static/style/list.css
+++ b/static/style/list.css
@@ -1,5 +1,5 @@
 .list_of_surveys{
-	height: 610px;
+	height: 620px;
 	overflow-y: scroll;
 }
 
@@ -11,4 +11,25 @@
   margin: 0 auto;
 	padding-bottom: 5%;
 	border-bottom: 2px solid white;
+}
+
+.list_item_block{
+	height: 100px;
+	width: 325px;
+	margin: 0 auto;
+	border: 0.8px solid white;
+	border-radius: 8px;
+}
+
+.list_item{
+	border-bottom: 0.8px solid white;
+}
+
+.item_theme{
+	margin-bottom: 40px;
+	font-size: 1.3rem;
+	/* font-weight: 200; */
+	/* margin-left: 2%; */
+	/* padding: 1%; */
+	width: 100%;
 }
