--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,19 +1,48 @@
-{% extends  "base.html" %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <div id="field_login">
+		<div class="login_register_div bg-light">
+			<button id="close_btn">✕</button>
+			<div id="center">
+				<h2>Вход</h2>
+				<form action="/login" id="data_form" method="post">
+					<input type="text" placeholder="имя пользователя или email" id="email_input" name="userName">
+					<input type="password" placeholder="пароль" id="password_input" name="userPassword">
+				</form>
+				<!-- нажимаешь на кнопку и данные передаются серверу -->
+				<button type="submit" form="data_form" id="submit_btn">Авторизоваться</button>
+				<a href="#" class="link_reg_forgot" id="forgot_password">Забыли пароль?</a>
+				<a href="#" class="link_reg_forgot" id="registration">Регистрация</a>
+			</div>
+		</div>
+    </div>
+    <script>
+    let login_form = document.querySelector("form");
+login_form.addEventListener('submit', form_send);
+function form_send(){
+	let form_data = {
+		"name": login_form.elements['email_input'].value,
+		"password": login_form.elements['password_input'].value
+	};
+	// let json_data = JSON.stringify(form_data);
+	
+	// console.log(JSON.stringify(form_data));
 
-{% block content %}
-    <h1>Sign In</h1>
-    <form action="" method="post" novalidate>
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}
-        </p>
-        <p>
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}
-        </p>
-        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-        <p>{{ form.submit() }}</p>
-    </form>
-    <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
-{% endblock %}
+	// $.ajax({
+	//   url: 'http://localhost:3000/login',
+	//   type: 'post',
+	//   data: JSON.stringify(form_data),
+	//   success: function(result) {
+	//     // действия при получения ответа (result) от сервера
+	//   }
+	// });
+}
+    </script>
+</body>
+</html>
