--- a/static/style/builder.css
+++ b/static/style/builder.css
@@ -42,10 +42,9 @@
 .name_of_choice{
 	width: 90%;
 	height: 3rem;
-	border-radius: 10px 10px 0 10px;
+	border-radius: 10px 10px 10px 10px;  /* 3 позиция */
 	border: 0.9px solid #007BFF;
 	padding: 1.5%;
-	text-align: center;
 	font-size: 1.7rem;
 	margin-right: 5%;
 }
@@ -55,20 +54,24 @@
 	font-size: 2.2rem;
 	background-color: rgba(0, 0, 0, 0.0);
 	border: 0;
+	opacity: 0.6;
+}
+
+.del_servey_choice:hover{
+	opacity: 0.9;
 }
 
 .choice{
 	margin-bottom: 4.3%;
-	/* display: inline-block;
-	width: 100%; */
 }
 
-.name_and_discription{
+.name_and_description{
 	display: inline-block;
 	width: 80%;
 }
 
-.discription{
+.description{
+	display: none; /* не забыть */
 	float: left;
 	margin-left: 60%;
 	font-size: 1.3rem;
@@ -79,12 +82,78 @@
 	border-radius: 0 0 10px 10px;
 }
 
-.discription .symbol_discription{
+.description .symbol_description{
 	float: right;
 	margin-right: 7%;
 }
 
-.discription .label_discription{
+.add_description{
+	float: left;
+	margin-left: 60%;	
+}
+
+.remove_description{
+	float: left;
+	margin-left: 63%;
+}
+
+.add_description span{
+	border: none;
+	font-size: 1.2rem;
+	background-color: rgba(255, 255, 255, 0);
+	opacity: 0.7;
+}
+
+.remove_description span{
+	border: none;
+	font-size: 1.2rem;
+	background-color: rgba(255, 255, 255, 0);
+	opacity: 0.7;
+}
+
+.add_description span:hover{
+	cursor: pointer;
+	opacity: 1;
+}
+
+.remove_description span:hover{
+	cursor: pointer;
+	opacity: 1;
+}
+
+.description .label_description{
 	float: left;
 	margin-left: 8%;
+}
+
+.description:hover{
+	cursor: pointer;
+}
+
+.description_textarea_photo{
+	margin-top: 100px;
+
+	display: none;
+	width: 85.5%;
+	height: 15rem;
+	border: 1px solid #007BFF;
+	padding: 3% 3% 3% 3%;
+	border-radius: 10px;
+}
+
+.description_photo{
+	float: left;
+	width: 18.5%;
+	height: 12rem;
+}
+
+.description_textarea{
+	float: left;
+	height: 12rem;
+	width: 79%;
+	margin-left: 2%;
+	border: 0.9px solid #007BFF;
+	resize: none;
+	padding: 2%;
+	font-size: 1.3rem;
 }
